--- a/index.html
+++ b/index.html
@@ -490,142 +490,24 @@ document.addEventListener('DOMContentLoaded', function() {
         widths: new Set()
     };
     
-    // 模拟数据 - 实际项目中，应从tapes-data.json加载
-    var tapesData = [
-        {
-            id: 1,
-            name: {
-                zh: "樱花图案和纸胶带",
-                en: "Sakura Pattern Washi Tape",
-                ja: "桜柄和紙テープ"
-            },
-            price: 15.00,
-            currency: "¥",
-            width: "15mm",
-            length: "7m",
-            brand: "MT",
-            description: {
-                zh: "粉色底色上点缀精致樱花图案，适合春季手帐装饰",
-                en: "Pink background with delicate cherry blossom pattern, perfect for spring journaling",
-                ja: "ピンクの背景に繊細な桜模様、春のジャーナリングに最適"
-            },
-            imageUrl: "/api/placeholder/400/320"
-        },
-        {
-            id: 2,
-            name: {
-                zh: "蓝色波浪纹和纸胶带",
-                en: "Blue Wave Pattern Washi Tape",
-                ja: "青い波模様和紙テープ"
-            },
-            price: 18.50,
-            currency: "¥",
-            width: "20mm",
-            length: "5m",
-            brand: "Kamoi",
-            description: {
-                zh: "深浅蓝色交替的波浪纹理，有着浓厚的日式夏季风情",
-                en: "Alternating light and dark blue wave patterns with a strong Japanese summer feel",
-                ja: "濃淡の青色が交互に波模様になっており、日本の夏らしさが感じられます"
-            },
-            imageUrl: "/api/placeholder/400/320"
-        },
-        {
-            id: 3,
-            name: {
-                zh: "金箔点缀几何纹和纸胶带",
-                en: "Gold Foil Geometric Washi Tape",
-                ja: "金箔幾何学模様和紙テープ"
-            },
-            price: 25.00,
-            currency: "¥",
-            width: "10mm",
-            length: "10m",
-            brand: "Papier Platz",
-            description: {
-                zh: "白色底色上点缀金色几何图案，典雅精致",
-                en: "White background with gold geometric patterns, elegant and exquisite",
-                ja: "白地に金の幾何学模様が散りばめられた、エレガントで精巧なデザイン"
-            },
-            imageUrl: "/api/placeholder/400/320"
-        },
-        {
-            id: 4,
-            name: {
-                zh: "复古邮戳和纸胶带",
-                en: "Vintage Postmark Washi Tape",
-                ja: "ヴィンテージ郵便スタンプ和紙テープ"
-            },
-            price: 12.80,
-            currency: "¥",
-            width: "15mm",
-            length: "8m",
-            brand: "Classiky",
-            description: {
-                zh: "米黄色底纹配上复古邮戳图案，适合做复古风格拼贴",
-                en: "Beige background with vintage postmark patterns, suitable for retro style collages",
-                ja: "ベージュ地にヴィンテージ郵便スタンプ模様、レトロなコラージュに最適"
-            },
-            imageUrl: "/api/placeholder/400/320"
-        },
-        {
-            id: 5,
-            name: {
-                zh: "森林动物系列和纸胶带",
-                en: "Forest Animals Washi Tape",
-                ja: "森の動物シリーズ和紙テープ"
-            },
-            price: 22.00,
-            currency: "¥",
-            width: "30mm",
-            length: "5m",
-            brand: "MT",
-            description: {
-                zh: "绿色底色搭配可爱森林动物插画，适合儿童手工",
-                en: "Green background with cute forest animal illustrations, ideal for children's crafts",
-                ja: "緑の背景にかわいい森の動物のイラスト、子供の工作に最適"
-            },
-            imageUrl: "/api/placeholder/400/320"
-        },
-        {
-            id: 6,
-            name: {
-                zh: "水彩花卉和纸胶带",
-                en: "Watercolor Floral Washi Tape",
-                ja: "水彩花柄和紙テープ"
-            },
-            price: 19.90,
-            currency: "¥",
-            width: "15mm",
-            length: "7m",
-            brand: "Papier Platz",
-            description: {
-                zh: "精美水彩画风格的花卉图案，色彩柔美",
-                en: "Exquisite watercolor style floral patterns with soft beautiful colors",
-                ja: "繊細な水彩画風の花柄、優しい色合い"
-            },
-            imageUrl: "/api/placeholder/400/320"
-        },
-        {
-            id: 7,
-            name: {
-                zh: "黑白格纹和纸胶带",
-                en: "Black and White Grid Washi Tape",
-                ja: "白黒チェック和紙テープ"
-            },
-            price: 14.50,
-            currency: "¥",
-            width: "20mm",
-            length: "10m",
-            brand: "Classiky",
-            description: {
-                zh: "简约黑白格纹设计，百搭款式",
-                en: "Minimalist black and white grid design, versatile style",
-                ja: "シンプルな白黒チェックデザイン、多用途なスタイル"
-            },
-            imageUrl: "/api/placeholder/400/320"
-        }
-    ];
+    // 从JSON文件加载数据，替换原有的tapesData变量
+fetch('tapes-data.json')
+    .then(function(response) {
+        return response.json();
+    })
+    .then(function(data) {
+        tapesData = data;
+        // 初始化页面
+        initializeLanguage();
+        setupFilters();
+        setupEventListeners();
+        renderTapeCollection(tapesData);
+    })
+    .catch(function(error) {
+        console.error('加载数据时出错:', error);
+        // 显示错误信息
+        collection.innerHTML = '<div class="no-results">加载数据失败，请刷新页面重试</div>';
+    });
     
     // 初始化
     initializeLanguage();
