--- a/index.html
+++ b/index.html
@@ -370,6 +370,7 @@
     <button class="sidebar-toggle" id="sidebar-toggle">≡</button>
     
     <footer>
+    <p>&copy; 2025 <span id="footer-title">和纸胶带收藏</span> | <span id="footer-designed">用❤️设计</span></p>
     <div class="copyright-info">
         <p>&copy; 2025 <span id="footer-title">和纸胶带收藏</span> | <span id="footer-designed">用❤️设计</span></p>
         <p class="disclaimer">本网站仅作为个人和纸胶带收藏记录和信息分享，非商业用途。</p>
@@ -481,6 +482,11 @@ document.addEventListener('DOMContentLoaded', function() {
             'en': 'Washi Tape Collection',
             'ja': '和紙テープコレクション'
         },
+        'footerDesigned': {
+            'zh': '用❤️设计',
+            'en': 'Designed with ❤️',
+            'ja': '❤️で設計'
+        }
 'disclaimer': {
     'zh': '本网站仅作为个人和纸胶带收藏记录和信息分享，非商业用途。',
     'en': 'This website is for personal washi tape collection documentation and information sharing only, not for commercial use.',
